// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackgroundFactConflictsPrompt golden > lists the time, description and senses for the generic variant 1`] = `
{
  "system": "배경 카드 하나의 설정 줄을 읽고, 함께 참일 수 없는 두 줄만 찾아라.
같은 대상을 두고 서로 반대로 말하는 줄이 상충이다(예: 「손님은 거실 소파에서 잔다」와 「손님에게 자기 방이 있다」). 뜻이 다를 뿐 함께 참일 수 있는 줄, 시간이 지나 바뀐 상태를 적은 줄은 상충이 아니다.
items에는 [설정]의 줄을 한 글자도 바꾸지 말고 그대로 옮겨라. 줄에 없는 문장을 쓰지 마라.
설명 없이 JSON 객체 하나만 출력하라. 상충이 없으면 conflicts는 빈 목록이다.
{"conflicts":[{"items":["",""]}]}",
  "user": "배경: 해외 콘도

[설정]
- 오후
- 손님은 거실 소파에서 잔다
- 손님에게 자기 방이 있다
- 에어컨 바람 냄새
",
}
`;

exports[`BackgroundFactConflictsPrompt golden > lists the time, description and senses for the rich variant 1`] = `
{
  "system": "배경 카드 하나의 설정 줄을 읽고, 함께 참일 수 없는 두 줄만 찾아라.
같은 대상을 두고 서로 반대로 말하는 줄이 상충이다(예: 「손님은 거실 소파에서 잔다」와 「손님에게 자기 방이 있다」). 뜻이 다를 뿐 함께 참일 수 있는 줄, 시간이 지나 바뀐 상태를 적은 줄은 상충이 아니다.
items에는 [설정]의 줄을 한 글자도 바꾸지 말고 그대로 옮겨라. 줄에 없는 문장을 쓰지 마라.
설명 없이 JSON 객체 하나만 출력하라. 상충이 없으면 conflicts는 빈 목록이다.
{"conflicts":[{"items":["",""]}]}",
  "user": "배경: 해외 콘도

[설정]
- 오후
- 손님은 거실 소파에서 잔다
- 손님에게 자기 방이 있다
- 에어컨 바람 냄새
",
}
`;

exports[`BackgroundFactConflictsPrompt golden > lists the time, description and senses for the xs variant 1`] = `
{
  "system": "배경 설정 줄 중 함께 참일 수 없는 두 줄만 원문 그대로 JSON으로: {"conflicts":[{"items":["",""]}]} (없으면 빈 목록).",
  "user": "배경: 해외 콘도

[설정]
- 오후
- 손님은 거실 소파에서 잔다
- 손님에게 자기 방이 있다
- 에어컨 바람 냄새
",
}
`;
